rename to images files for better visualisation: tech icon in ABOUT, project poster in WORK (plus i swapped jQuery icon with heroku) and footer icons

--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -49,9 +49,9 @@
 
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/AlaEddin-abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/footer-icon-github.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/footer-icon-twitter.svg" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/footer-icon-linkedin.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
