--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
 		<h1 class="work-container__header">WORK</h1>
 		<div class="project-list">
 			<div class="project-list__item">
-				<img src="img/website-portfolio-poster.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
+				<img src="img/poster-website-portfolio.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
 				<h2>My Website Portfolio</h2>
 				<p>
 					The very one you're looking at! <br>
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/Cineteca-poster.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
+				<img src="img/poster-Cineteca.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
 				<h2>Movies RESTful API</h2>
 				<p>
 					A web app that allows to login to their profile, search and displays list of movies,
@@ -75,7 +75,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/meetup-poster.png" class="project-list__img img" alt="picture illustrates the Meetup app built with React">
+				<img src="img/poster-meetup.png" class="project-list__img img" alt="picture illustrates the Meetup app built with React">
 				<h2>Meetup App </h2>
 				<p>
 					This progressive web application can be downloaded so it looks identical to a normal mobile app,
@@ -93,7 +93,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/shatApp-poster.png" class="project-list__img img" alt="picture illustrates the chat app built with Native React">
+				<img src="img/poster-shatApp.png" class="project-list__img img" alt="picture illustrates the chat app built with Native React">
 				<h2>shatApp</h2>
 				<p>
 					An introvert React-Native app for both iOs and Android devices, provides with a full functioning chat that sends and receives messages,
@@ -109,7 +109,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/campGround-poster.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
+				<img src="img/poster-campGround.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
 				<h2>campGrounds</h2>
 				<p>
 					CampGrounds is a YELP-like web app, Users can log in add and rate camping grounds they visited or advertise to other camping enthusiasts!
@@ -124,7 +124,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/quiz-app-poster.png" class="project-list__img img" alt="picture illustrates the quiz app built with Angular">
+				<img src="img/poster-quiz-app.png" class="project-list__img img" alt="picture illustrates the quiz app built with Angular">
 				<h2>Angular Quiz App</h2>
 				<p>
 					A simple French and Math quiz app! Although simple this app shows my interest in diverse frameworks,
@@ -138,7 +138,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/toVue-list-poster.png" class="project-list__img img" alt="picture illustrates the todo list app built with Vue">
+				<img src="img/poster-toVue-list.png" class="project-list__img img" alt="picture illustrates the todo list app built with Vue">
 				<h2>ToVue List</h2>
 				<p>
 					The evergreen todo list app, for such simple and popular tasks I decided to use the super awesome Vue library.
@@ -152,7 +152,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/Pokedex-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
+				<img src="img/poster-Pokedex-simple-js-app.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Pokedex Js App</h2>
 				<p>
 					With the help of an APIs I used vanilla Javascript to fetch and display modal cards with info and details about Pokémons.
@@ -168,7 +168,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/colorGame-poster.png" class="project-list__img img" alt="picture illustrates the color game project">
+				<img src="img/poster-colorGame.png" class="project-list__img img" alt="picture illustrates the color game project">
 				<h2>RGB Color Game</h2>
 				<p>
 					A vanilla Javascript game where you guess the color of random RGB value choosing between 3 or 9 possible colors whether playing in easy or hard mode,
@@ -182,7 +182,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/circles-poster.png" class="project-list__img img" alt="picture illustrates the circles game project">
+				<img src="img/poster-circles.png" class="project-list__img img" alt="picture illustrates the circles game project">
 				<h2>Circles</h2>
 				<p>
 					Using visual and sound effect I made this fun app, the keyboard generate a colored expanding dot on the screen and a paired sound,
@@ -196,7 +196,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/yourProject-poster.jpeg" class="project-list__img img" alt="picture illustrates a boat on a calm sea">
+				<img src="img/poster-yourProject.jpeg" class="project-list__img img" alt="picture illustrates a boat on a calm sea">
 				<h2>Your Project</h2>
 				<p>
 					I'm eager to be part of a developer team, I believe this is the best way to grow and become a better developer.
@@ -211,9 +211,9 @@
 	</div> <!-- work container -->
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/footer-icon-github.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/footer-icon-twitter.svg" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/footer-icon-linkedin.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
