--- a/about.html
+++ b/about.html
@@ -67,102 +67,102 @@
 
 		<div class="tech-icons">
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/html5.svg" alt="HTML5 icon">
+				<img class="tech-icon__img img" src="img/tech-icon-html5.svg" alt="HTML5 icon">
 				<span class="tooltip-text">HTML5</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/css3.svg" alt="CSS3 icon">
+				<img class="tech-icon__img img" src="img/tech-icon-css3.svg" alt="CSS3 icon">
 				<span class="tooltip-text">CSS3</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/javascript.svg" alt="JavaScript icon">
+				<img class="tech-icon__img img" src="img/tech-icon-javascript.svg" alt="JavaScript icon">
 				<span class="tooltip-text">JavaScript</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/es6.svg" alt="ES6 icon">
+				<img class="tech-icon__img img" src="img/tech-icon-es6.svg" alt="ES6 icon">
 				<span class="tooltip-text">ES6</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/react.svg" alt="React icon">
+				<img class="tech-icon__img img" src="img/tech-icon-react.svg" alt="React icon">
 				<span class="tooltip-text">React</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
+				<img class="tech-icon__img img" src="img/tech-icon-reactNativeFirebase.svg" alt="React Native Firebase icon">
 				<span class="tooltip-text">React Native &amp; Firebase</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/angular.svg" alt="Angular icon">
+				<img class="tech-icon__img img" src="img/tech-icon-angular.svg" alt="Angular icon">
 				<span class="tooltip-text">Angular</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/vue.svg" alt="Vue icon">
+				<img class="tech-icon__img img" src="img/tech-icon-vue.svg" alt="Vue icon">
 				<span class="tooltip-text">Vue</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/sass.svg" alt="SASS icon">
-				<span class="tooltip-text">SASS</span>
-			</div>
-
-			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/bootstrap4.svg" alt="Bootstrap icon">
-				<span class="tooltip-text">Bootstrap 4</span>
-			</div>
-
-			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/jquery.svg" alt="jQuery icon">
+				<img class="tech-icon__img img" src="img/tech-icon-jquery.svg" alt="jQuery icon">
 				<span class="tooltip-text">jQuery</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/nodejs.svg" alt="Node.js icon">
+				<img class="tech-icon__img img" src="img/tech-icon-bootstrap4.svg" alt="Bootstrap icon">
+				<span class="tooltip-text">Bootstrap 4</span>
+			</div>
+
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/tech-icon-nodejs.svg" alt="Node.js icon">
 				<span class="tooltip-text">Node.js</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/mongo-db.svg" alt="Mongo DB icon">
-				<span class="tooltip-text">Mongo-DB</span>
+				<img class="tech-icon__img img" src="img/tech-icon-heroku.svg" alt="Heroku icon">
+				<span class="tooltip-text">Heroku</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/postgre-sql.svg" alt="Postgre icon">
+				<img class="tech-icon__img img" src="img/tech-icon-mongo-db.svg" alt="Mongo DB icon">
+				<span class="tooltip-text">Mongo DB</span>
+			</div>
+
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/tech-icon-postgre-sql.svg" alt="Postgre icon">
 				<span class="tooltip-text">PostgreSQL</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/jest.svg" alt="Jest icon">
+				<img class="tech-icon__img img" src="img/tech-icon-jest.svg" alt="Jest icon">
 				<span class="tooltip-text">Jest</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/git.svg" alt="Git icon">
+				<img class="tech-icon__img img" src="img/tech-icon-git.svg" alt="Git icon">
 				<span class="tooltip-text">Git</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/adobe-xd.svg" alt="Adobe XD icon">
+				<img class="tech-icon__img img" src="img/tech-icon-adobe-xd.svg" alt="Adobe XD icon">
 				<span class="tooltip-text"> Adobe XD</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/slack.svg" alt="Slack icon">
+				<img class="tech-icon__img img" src="img/tech-icon-slack.svg" alt="Slack icon">
 				<span class="tooltip-text">Slack</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/trello.svg" alt="Trello icon">
+				<img class="tech-icon__img img" src="img/tech-icon-trello.svg" alt="Trello icon">
 				<span class="tooltip-text">Trello</span>
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/vsc.svg" alt="Visual Studio Code icon">
+				<img class="tech-icon__img img" src="img/tech-icon-vsc.svg" alt="Visual Studio Code icon">
 				<span class="tooltip-text">VS Code</span>
 			</div>
 		</div> <!-- tech-icon -->
@@ -271,9 +271,9 @@
 	</div> <!-- about-container -->
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/footer-icon-github.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/footer-icon-twitter.svg" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/footer-icon-linkedin.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
