--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
 
 		<div>
 			<p>Find me on</p>
-			<a href="https://github.com/Funkateer" title="Github" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
-			<a href="https://twitter.com/Funk4teer" title="twitter" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-			<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+			<a href="https://github.com/Funkateer" title="Github" target="_blank"><img class="social-img" src="img/footer-icon-github.svg" alt="Github"></a>
+			<a href="https://twitter.com/Funk4teer" title="twitter" target="_blank"><img class="social-img" src="img/footer-icon-twitter.svg" alt="Twitter"></a>
+			<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/footer-icon-linkedin.svg" alt="LinkedIn"></a>
 		</div>
 		<br>
 
