use js/css prod.mini file and fix twitter footer icon name

--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -7,9 +7,7 @@
   <meta name="description" content="Ala Eddin Abugrara CV -curriculum vitae- Resume">
 	<meta name="author" content="Alà Eddin Abugrara">
 	<link href="https://fonts.googleapis.com/css?family=Lato:900|Nunito:300&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-<!-- DEV CSS -->
-<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
   <title>Ala Eddin Abugrara CV Resume</title>
 </head>
 <body>
