--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,7 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-	<!-- DEV CSS -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
 	<title>Contacts | Ala eddin 'Aladin' Abugrara</title>
 </head>
 <body>
@@ -89,8 +87,8 @@
 			<input type="hidden" name="*redirect" value="http://www.alabugrara.com/contact" />
 			<input type="hidden" name="*honeypot" />
 		</form>
-	</div>
-	<!-- <script src="dist/js/scripts.min.js"></script> -->
-	<script src="js/scripts.js"></script>
+  </div>
+
+	<script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
