--- a/about.html
+++ b/about.html
@@ -9,9 +9,7 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-	<!-- DEV CSS -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
 	<!-- LINKS FOR SVG ANIMATION -->
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -266,9 +264,11 @@
 			</g>
 		</g>
 		<path class="fil11" d="M0 0h20962v10601H0z"/>
-		</svg>
-		<p class="SVGlegend">SVG animation courtesy of <a href="https://www.linkedin.com/in/fabiogarciaarranz/" target="_blank">Fabio Arranz</a></p>
-	</div> <!-- about-container -->
+    </svg>
+
+    <p class="SVGlegend">SVG animation courtesy of <a href="https://www.linkedin.com/in/fabiogarciaarranz/" target="_blank">Fabio Arranz</a></p>
+  </div> <!-- about-container -->
+
 	<footer>
 		<p>Find me on</p>
 		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/footer-icon-github.svg" alt="Github"></a>
