--- a/work.html
+++ b/work.html
@@ -36,7 +36,8 @@
 				</div>
 			</div>
 		</nav>
-	</header>
+  </header>
+
 	<div class="work-container">
 		<h1 class="work-container__header">WORK</h1>
 		<div class="project-list">
@@ -46,7 +47,7 @@
 				<p>
 					The very one you're looking at! <br>
 					I wrote my own portfolio from scratch using only HTML5 without the aid of third party libraries.
-					I took care of all aspects from the page designing <!-- <a href="file/Portfolio-UI.xd" download >designing</a> -->
+					I took care of all aspects from the page designing using Adobe XD (design file available in the github repo)
 					to the building stage, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics,
 					mobile responsiveness and more <br>
 					<br>
@@ -57,7 +58,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/poster-Cineteca.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
+				<img src="img/poster-cineteca.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
 				<h2>Movies RESTful API</h2>
 				<p>
 					A web app that allows to login to their profile, search and displays list of movies,
@@ -150,7 +151,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/poster-Pokedex-js-app.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
+				<img src="img/poster-pokedex-js-app.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Pokedex Js App</h2>
 				<p>
 					With the help of an APIs I used vanilla Javascript to fetch and display modal cards with info and details about Pokémons.
